# tubo/src/schema/models/CreatePlaylistRequest.ts
@@ -1,0 +1,10 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type CreatePlaylistRequest = {
+    name: string;
+    description?: string | null;
+    public?: boolean | null;
+};
+
