# tubo/src/schema/models/User.ts
@@ -1,0 +1,11 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type User = {
+    id: string;
+    display_name?: string | null;
+    created_at?: string | null;
+    email?: string | null;
+};
+
