# webapi/src/models/SharedSpotifyType.ts
@@ -1,0 +1,12 @@
+import { Required } from "@tsed/schema";
+
+export class Image {
+  @Required()
+  url: string;
+
+  @Required()
+  height: number;
+
+  @Required()
+  width: number;
+}
